# BingoCardMaker

./: .gitignore  BingoMaker_Gen_Batch.spec  Dockerfile  README.md  config.json  output.html  pyproject.toml
resources/: bingo_database.sqlite  config.json
scripts/: buildwin.ps1  clean.ps1  database_init.py  run.ps1
src/BingoCardMakerServer/: constants.py  database.py  dependencies.py  exceptions.py  main.py
src/BingoCardMakerServer/MountedStatic/: cardconfig.html  index.html  login.html  root_style.css
src/BingoCardMakerServer/admintools/: crud.py  router.py  sitesettings.py
src/BingoCardMakerServer/cardgen/: crud.py  makermanager.py  models.py  router.py
src/BingoCardMakerServer/htmlpages/: index.html
src/BingoCardMakerServer/pages/: router.py
src/BingoCardMakerServer/poolmanagment/: crud.py  models.py  router.py  schemas.py  utils.py
src/BingoCardMakerServer/templetes/: cardconfig.html  header.html  index.html  login.html  poolmanagment.html  uploadimage.html
src/BingoCardMakerServer/users/: crud.py  models.py  router.py  schemas.py
src/bingocardmaker/: __init__.py  bingocard.py  main.py  makepool.py
src/bingocardmakerserver/: constants.py  dependencies.py  exceptions.py  main.py
src/bingocardmakerserver/MountedStatic/: redirectnonadmin.js  root_style.css
src/bingocardmakerserver/admintools/: models.py  router.py  schemas.py  sitesettings.py  utils.py
src/bingocardmakerserver/cardgen/: crud.py  makermanager.py  router.py
src/bingocardmakerserver/pages/: router.py
src/bingocardmakerserver/poolmanagment/: crud.py  models.py  router.py  schemas.py  utils.py
src/bingocardmakerserver/templetes/: cardconfig.html  header.html  poolmanagment.html  uploadimage.html
src/bingocardmakerserver/users/: crud.py  schemas.py  utils.py
src/bingoclientserver/: main.py
src/devscripts/: runserver.py  start.sh
src/logger/: logger.py
src/uibingoeditor/: uieditor.py
(+3 files in other folders)
