[project]
name = "bingocardmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaden Gryphon", email = "KadenGryphon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "pillow>=12.0.0",
]

[project.scripts]
bingocardmaker = "bingocardmaker:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
