[project]
name = "bingocardmaker"
version = "0.1.0"
description = "A command line tool to create custom randomized bingo cards"
readme = "README.md"
authors = [
    { name = "Nox Noctua", email = "NoxNoctua.vtg@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "pillow>=12.0.0",
    "qrcode[pil]>=8.2",
]

[project.scripts]
bingocardmaker = "bingocardmaker:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstall>=0.1.4",
    "pyinstaller>=6.16.0",
]
