[project]
name = "bingocardmaker"
version = "0.1.0"
description = "A command line tool to create custom randomized bingo cards"
readme = "README.md"
authors = [
    { name = "Nox Noctua", email = "NoxNoctua.vtg@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.120.1",
    "itsdangerous>=2.2.0",
    "jwt>=1.4.0",
    "pillow>=12.0.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.4",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
bingocardmaker = "bingocardmaker:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pip>=25.2",
    "pyinstall>=0.1.4",
    "pyinstaller>=6.16.0",
]
